--- a/extension-demo/my extension-demo/popup.html
+++ b/extension-demo/my extension-demo/popup.html
@@ -5,7 +5,10 @@
 	    <title>Document</title>
 	  </head>
 	  <body>
+		<script src="manifest.json"></script>
+		<script src="popup.sublime-workspace"></script>
 	    <h1>Hello Everyone</h1><br>
 		<h5>Do you Study Everyday？</h5>
+	
 	  </body>
   </html>
